--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,6 +16,12 @@ titles:
   zh-HK   : *ZH_HANT
   ko      : &KO       홈
   ko-KR   : *KO
+  fr      : &FR       Accueil
+  fr-BE   : *FR
+  fr-CA   : *FR
+  fr-CH   : *FR
+  fr-FR   : *FR
+  fr-LU   : *FR
   # @end locale config
 show_title: false
 articles:
