Reg:  Naver webmaster

--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,3 +1,6 @@
 <!-- start custom head snippets -->
 
+  <!-- Naver Webmaster tag-->
+  <meta name="naver-site-verification" content="70fd71f11152a17c588c71a05e9bd6fad70c8ade" />
+
 <!-- end custom head snippets -->
