--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -211,7 +211,9 @@ layout: base
                   {%- include article-info.html article=page -%}
                 {%- endif -%}
 
-                    <div class="js-article-content">{{ content }}</div>
+                    <div class="js-article-content">
+                    <p>여기인가?</p>
+                      {{ content }}</div>
                     {%- if _comment != false -%}
                       <section class="page__comments d-print-none">{%- include comments.html -%}</section>
                     {%- endif -%}
