--- a/_includes/head.html
+++ b/_includes/head.html
@@ -34,12 +34,12 @@
 	<!--트위터 썸네일을 큰 사이즈로 노출시킨다 -->
   <meta name="twitter:card" content="summary_large_image" />
 
-	<!-- 패이지 타이틀이 있으면, 오픈그래프 타이틀과 트위터 아타이틀에 (콘텐츠 타이틀)을 가져온다 -->
+	<!-- 패이지 타이틀이 있으면, 오픈그래프 타이틀과 트위터 타이틀에 (콘텐츠 타이틀)을 가져온다 -->
   {% if page.title %}
     <meta property="og:title" content="{{ page.title }}" />
     <meta name="twitter:title" content="{{ page.title }}" />
 
-	<!-- 패이지 타이틀이 없으면, 오픈그래프 타이틀과 트위터 아타이틀에 (사이트 타이틀)과 (사이트 태그라인)을 가져온다 -->
+	<!-- 패이지 타이틀이 없으면, 오픈그래프 타이틀과 트위터 타이틀에 (사이트 타이틀)과 (사이트 태그라인)을 가져온다 -->
   {% else %}
     <meta property="og:title" content="{{ site.title }} | {{ site.tagline }}" />
     <meta name="twitter:title" content="{{ site.title }} | {{ site.tagline }}" />
