--- a/_layouts/404.html
+++ b/_layouts/404.html
@@ -6,7 +6,7 @@ show_title: false
 <div class="layout--404">
   <div class="sign">
     <h1>404</h1>
-    <p>Page not found :(</p>
+    <p>페이지를 찾을 수 없습니다</p>
   </div>
 </div>
 
