--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,18 +16,14 @@ titles:
   zh-HK   : *ZH_HANT
   ko      : &KO       홈
   ko-KR   : *KO
-  fr      : &FR       Accueil
-  fr-BE   : *FR
-  fr-CA   : *FR
-  fr-CH   : *FR
-  fr-FR   : *FR
-  fr-LU   : *FR
+
   # @end locale config
-show_title: false
+
+show_title: true
 articles:
   data_source: paginator.posts
   article_type: BlogPosting
-  show_cover: false
+  show_cover: true
   show_excerpt: true
   show_readmore: true
   show_info: true
@@ -35,6 +31,7 @@ articles:
 <div class="layout--home">
   {%- include paginator.html -%}
 </div>
+
 <script>
   {%- include scripts/home.js -%}
 </script>
