--- a/_includes/head.html
+++ b/_includes/head.html
@@ -79,11 +79,11 @@
 	1) 페이지에 이미지가 있으면 블로그이므로 오픈그래프 이미지로 `feature:` 에 설정한 이미지가 노출한다
 	2) 페이지에 이미지가 없으면 메인 페이지이므로 `_config.yml`에 `thumbnail:`로 지정한 기본 썸네일이 노출된다  -->
   {% if page.image %}
-    <meta property="og:image" content="{{ site.github.url }}/img/thumbnail/{{ page.image.feature }}" />
-    <meta name="twitter:image:src" content="{{ site.github.url }}/img/thumbnail/{{ page.image.feature }}" />
+    <meta property="og:image" content="{{ site.github.url }}/assets/images/thumbnail/{{ page.image.feature }}" />
+    <meta name="twitter:image:src" content="{{ site.github.url }}/assets/images/thumbnail/{{ page.image.feature }}" />
   {% else %}
-    <meta property="og:image" content="{{ site.github.url }}/img/thumbnail/thumbnail.png" />
-    <meta name="twitter:image:src" content="{{ site.github.url }}/img/thumbnail/thumbnail.png" />
+    <meta property="og:image" content="{{ site.github.url }}/assets/images/thumbnail.png" />
+    <meta name="twitter:image:src" content="{{ site.github.url }}/assets/images/thumbnail.png" />
   {% endif %}
 
 	<!-- 사이트내 언어, 사이트 이름 표기로 오픈그래프의 사이트 이름으로 _config.yml에 설정한 title이 노출된다-->
