--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,7 +14,7 @@ titles:
   zh-Hant : &ZH_HANT  主頁
   zh-TW   : *ZH_HANT
   zh-HK   : *ZH_HANT
-  ko      : &KO       홈
+  ko      : &KO       블로그
   ko-KR   : *KO
 
   # @end locale config
@@ -25,7 +25,7 @@ articles:
   article_type: BlogPosting
   show_cover: true
   show_excerpt: true
-  show_readmore: true
+  show_readmore: false
   show_info: true
 ---
 <div class="layout--home">
