--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,25 +2,24 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-147384946-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-147384946-1');
-</script>
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-W8NMB79');</script>
+  <!-- End Google Tag Manager -->
 
 {%- include head/favicon.html -%}
 
 {%- include snippets/get-article-title.html article=page -%}
+
 <title>
-		{%if page.title %}
-			{{ page.title }} | {{ site.title }}
-		{% else %}
-			{{ site.title }} | {{ site.tagline }}
-		{% endif %}
+  {%if page.title %}
+  {{ page.title }} | {{ site.title }}
+  {% else %}
+  {{ site.title }} | {{ site.tagline }}
+  {% endif %}
 </title>
 
 <!-- Meta description -->
@@ -40,7 +39,7 @@
 
 {%- include snippets/get-sources.html -%}
 {%- assign _sources = __return -%}
-<link rel="stylesheet" href="{{ _sources.font_awesome }}" >
+<link rel="stylesheet" href="{{ _sources.font_awesome }}">
 
 <!-- Naver Webmaster tag-->
 <meta name="naver-site-verification" content="70fd71f11152a17c588c71a05e9bd6fad70c8ade" />
