--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -14,7 +14,15 @@ layout: none
     </script>
     {%- include scripts/variables.html -%}
   </head>
+
   <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript>
+      <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W8NMB79"
+      height="0" width="0" style="display:none;visibility:hidden"></iframe>
+    </noscript>
+    <!-- End Google Tag Manager (noscript) -->
+
     <div class="root" data-is-touch="false">
       {{ content }}
     </div>
