--- a/_sass/components/_article-header.scss
+++ b/_sass/components/_article-header.scss
@@ -30,14 +30,14 @@
     }
   }
   .overlay__excerpt {
-    font-size: map-get($base, font-size-h3-xl);
+    font-size: map-get($base, font-size-h3-sm);
     @include media-breakpoint-down(lg) {
-      font-size: map-get($base, font-size-h3-lg);
-    }
-    @include media-breakpoint-down(md) {
       font-size: map-get($base, font-size-h3-sm);
     }
-    font-weight: map-get($base, font-weight-bold);
+    @include media-breakpoint-down(md) {
+      font-size: map-get($base, font-size-h3-xs);
+    }
+    font-weight: map-get($base, font-weight);
   }
 
   .article__header {
