--- a/_sass/common/components/_toc.scss
+++ b/_sass/common/components/_toc.scss
@@ -38,7 +38,7 @@ ul.toc {
       line-height: map-get($base, line-height-xs);
     }
   }
-  .toc-h1 {
+  .toc-h2 {
     @include split-line(bottom);
     padding: map-get($spacers, 2) 0 map-get($spacers, 1) 0;
     margin-bottom: map-get($spacers, 2);
@@ -52,18 +52,17 @@ ul.toc {
       @include link-colors($text-color-d, $main-color-1);
     }
   }
-  .toc-h2 {
-    &, a {
-      font-weight: map-get($base, font-weight-bold);
-    }
-  }
+  // .toc-h3 {
+  //   &, a {
+  //     font-weight: map-get($base,font-weight);
+  //   }
+  // }
   .toc-h3 {
     margin-left: map-get($spacers, 3);
   }
   .toc-h4 {
     margin-left: map-get($spacers, 3) * 2;
   }
-  .toc-h5,
   .toc-h6 {
     margin-left: map-get($spacers, 3) * 3;
   }
@@ -104,7 +103,7 @@ ul.toc--navigator {
       @include link-colors($text-color-l);
     }
   }
-  .toc-h1 {
+  .toc-h2 {
     &, a {
       font-size: map-get($base, font-size);
       line-height: map-get($base, line-height);
@@ -114,7 +113,7 @@ ul.toc--navigator {
       @include link-colors($text-color-d);
     }
   }
-  .toc-h2 {
+  .toc-h3 {
     &, a {
       font-size: map-get($base, font-size-sm);
       font-weight: map-get($base, font-weight-bold);
