--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,6 +9,11 @@
   'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
   })(window,document,'script','dataLayer','GTM-W8NMB79');</script>
   <!-- End Google Tag Manager -->
+  
+  <!-- AdSense -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2582224220411872"
+     crossorigin="anonymous"></script>
+  <!-- End AdSense -->
 
 {%- include head/favicon.html -%}
 
